add social icons to splash page

--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -10,6 +10,7 @@ html, body {
   height: 100%;
   font-family: 'Open Sans', 'sans-serif';
   font-weight: lighter;
+  padding-bottom: 20px;
 }
 
 .overlay {
@@ -41,7 +42,7 @@ html, body {
 .container {
   height:100%;
   display:table;
-  margin-top: -46px;
+  margin-top: -16px;
   padding: 0;
 }
  
@@ -49,4 +50,24 @@ html, body {
   height: 100%;
   display:table-cell;
   vertical-align: middle;
+}
+
+.social, .footer .container {
+  text-align: center;
+}
+
+.social img {
+  margin: 10px;
+  margin-top: 20px;
+  width: 40px;
+}
+
+.social .erlibird {
+  margin: 10px;
+  margin-top: 10px;
+  width: 120px;
+}
+
+.footer {
+
 }
