--- a/public/css/protests/index.css
+++ b/public/css/protests/index.css
@@ -1,3 +1,11 @@
 .top-protest {
   margin-bottom: 20px;
 }
+
+.view-more {
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
