--- a/public/css/earlysignup.css
+++ b/public/css/earlysignup.css
@@ -46,8 +46,8 @@ html, body {
 }
 
 .social img {
-  /*width: 51px;*/
-  margin-top: 10px;
+  width: 50px;
+  margin-top: 20px;
   margin-left: 10px;
 }
 
